--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 <div class="banner">
     <h1 class="banner-head">
         Simple Pricing.<br>
-        Try before you buy.
+        Try before you meow.
     </h1>
 </div>
 
