--- a/public/meow.html
+++ b/public/meow.html
@@ -3,6 +3,10 @@
   <head>
   </head>
   <body>
+    <a href='http://postimg.org/image/f8x90kf7t/' target='_blank'><img src='http://s12.postimg.org/f8x90kf7t/Animal.jpg' border='0' alt="Animal" /></a>
+  
+    <br />
+  
     Meow was here.
   </body>
 </html>
