--- a/public/feedback.html
+++ b/public/feedback.html
@@ -259,5 +259,8 @@ Please consider reviewing the applications of:
   ga('create', 'UA-59564558-1', 'auto');
   ga('send', 'pageview');
 </script>
+
+<a href="http://zanypaypal.herokuapp.com/">Link to Payment Packages</a>
+
 </body>
 </html>
