--- a/public/feedback.html
+++ b/public/feedback.html
@@ -153,7 +153,7 @@ Please consider reviewing the applications of:
     
     <br /><br />
     
-    <b><i>Sandbox Account</i></b>
+    <b><u>Sandbox Account</u></b>
     <br />
     <b>Email:</b> meow@cat.com
     <br />
